testing/nextcloud/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud
  namespace: linole
  labels:
    app: nextcloud
spec:
  replicas: 1
  serviceName: nextcloud
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      namespace: linole
      labels:
        app: nextcloud
    spec:
      containers:
#        - name: nginx
#          image: nginx:latest
#          volumeMounts:
#            - name: nextcloud-shared-storage
#              mountPath: /var/www/html
#            - name: nextcloud-nginx-config
#              mountPath: /etc/nginx/nginx.conf
#              subPath: nginx.conf
        - name: nextcloud
          image: nextcloud:24-apache
          volumeMounts:
            - name: nextcloud-persistent-storage
              mountPath: /var/www/html
      volumes:
#        - name: nextcloud-shared-storage
#          emptyDir: { }
        - name: nextcloud-nginx-config
          configMap:
            name: nextcloud-nginx-config
  volumeClaimTemplates:
    - metadata:
        name: nextcloud-persistent-storage
        namespace: linole
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "longhorn"
        resources:
          requests:
            storage: 10Gi
