testing/nextcloud/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: linole
  labels:
    app: nextcloud
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
    - name: fpm
      port: 9000
    - name: nginx
      port: 80
