testing/nextcloud/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: linole
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.intern.linole.no
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
